Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
   - main  # Trigger pipeline when changes are pushed to the main branch
 
 pool:
-  vmImage: 'ubuntu-latest'  # Use a hosted Ubuntu agent
+  vmImage: ubuntu-latest  # Use a hosted Ubuntu agent
 
 steps:
 # Step 1: Checkout the code from GitHub
@@ -14,18 +14,13 @@ steps:
     versionSpec: '3.x'  # Use the latest Python 3.x version
   displayName: "Set up Python"
 
-# Step 3: Install dependencies from requirements.txt
+# Step 3: Install dependencies from the correct path
 - script: |
     python -m pip install --upgrade pip
-    pip install -r requirements.txt
+    pip install -r project/requirements.txt  # Adjusted path to requirements.txt
   displayName: "Install dependencies"
 
 # Step 4: Run a simple Python script to check the environment
 - script: |
     python -c "print('🎶 Hello from Music Playlist Batch Creator!')"
   displayName: "Run a Python script"
-
-# Step 5: Publish build artifacts (optional, if needed for deployment)
-- publish: $(Build.ArtifactStagingDirectory)
-  artifact: drop
-  displayName: 'Publish build artifacts'
