--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,6 +18,7 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     pip install -r project/requirements.txt  # Adjusted path to requirements.txt
+    pip install pytest  # Install pytest explicitly
   displayName: "Install dependencies"
 
 # Step 4: Run unit tests using pytest
